--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 /node_modules
 package-lock.json.
+echo .env >> .gitignore
 .env
 aws s3/.env
+
+# Stage and commit
+git add .gitignore
+git commit -m "Add .env to .gitignore"
