--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 /node_modules
-package-lock.json.
-echo .env >> .gitignore
+/package-lock.json
 .env
 aws s3/.env
-
-# Stage and commit
-git add .gitignore
-git commit -m "Add .env to .gitignore"
+bfg-1.15.0.jar
