--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.879.0",
+    "@aws-sdk/s3-request-presigner": "^3.879.0",
     "@supabase/supabase-js": "^2.53.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
